--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,4 +1,5 @@
-driver=com.mysql.cj.jdbc.Driver
+driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://123.207.96.49:3306/abccs
+#url=jdbc:mysql://localhost:3306/abccs
 username=root
-password=tb
+password=tb123456
